<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:id="@+id/screen3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/onCreate3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onCreate3" />

        <TextView
            android:id="@+id/onStart3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onStart3" />

        <TextView
            android:id="@+id/onStop3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onStop3" />

        <TextView
            android:id="@+id/onDestroy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onDestroy3" />
    </LinearLayout>
</FrameLayout>