<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AIActivity">

    <LinearLayout
        android:id="@+id/screen1"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/onCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onCreate" />

        <TextView
            android:id="@+id/onStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onStart" />

        <TextView
            android:id="@+id/onStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onStart" />

        <TextView
            android:id="@+id/onDestroy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onDestroy" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>